[package]
name = "weebhook"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/catppuccin/weebhook"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-github-webhook-extract = "0.2.0"
envy = "0.4.2"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
