[package]
name = "catppuccin-rockdove"
version = "1.0.1"
description = "🤖 Soothing pastel attacks for Men In The Middle"
repository = "https://github.com/catppuccin/rockdove"
edition = "2021"
keywords = [
    "axum",
    "catppuccin",
    "discord",
    "github",
    "octocrab",
    "rockdove",
    "webhook",
]
categories = ["science"]
license-file = "LICENSE"

[[bin]]
name = "rockdove"
path = "src/main.rs"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.6"
axum-github-webhook-extract = "0.2.0"
catppuccin = "2.4.0"
envy = "0.4.2"
octocrab = { git = "https://github.com/backwardspy/octocrab", branch = "feat/webhook-model-fields" }
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
thiserror = "1.0.64"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# insta recommends to do this so that it's more "fun" to use, among other things
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[dev-dependencies]
insta = { version = "1.40.0", features = ["yaml"] }
yare = "3.0.0"
