[package]
name = "catppuccin-rockdove"
version = "2.0.0"
description = "🤖 Soothing pastel attacks for Men In The Middle"
repository = "https://github.com/catppuccin/rockdove"
edition = "2021"
keywords = [
    "axum",
    "catppuccin",
    "discord",
    "github",
    "octocrab",
    "rockdove",
    "webhook",
]
categories = ["science"]
license-file = "LICENSE"

[[bin]]
name = "rockdove"
path = "src/main.rs"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
axum-github-webhook-extract = "0.3.0"
catppuccin = "2.5.1"
envy = "0.4.2"
octocrab = "0.44.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }
yare = "3.0.0"

# insta recommends to do this so that it's more "fun" to use, among other things
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"

[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-22.04"
x86_64-unknown-linux-gnu = "ubuntu-22.04"
